--- a/.github/workflows/pre-commit_hooks.yaml
+++ b/.github/workflows/pre-commit_hooks.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: set up python 3.10
       uses: actions/setup-python@v1
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: install pre-commit
       run: |
