Adds a basic list of packages and an account view

--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,6 @@
 {
   "name": "database.dev",
+  "description": "database.dev is a database package manager, like NPM for NodeJS, or Cargo for Rust.",
   "private": true,
   "scripts": {
     "dev": "next dev",
