--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
@@ -29,6 +30,7 @@
     "eslint-config-next": "12.0.8",
     "jest": "^27.4.7",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.15",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.4"
