--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
     "@supabase/ui": "^0.36.2",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-async-hook": "^4.0.0",
     "react-dom": "17.0.2",
     "react-query": "^3.34.8"
   },
