--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@supabase/supabase-auth-helpers": "^1.1.3",
     "@supabase/supabase-js": "^1.29.1",
     "@supabase/ui": "^0.37.0-alpha.38",
     "next": "12.1.0",
