--- a/website/.gitignore
+++ b/website/.gitignore
@@ -23,20 +23,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-
-# Supabase
-**/supabase/.branches
-**/supabase/.temp
-**/supabase/.env
+next-env.d.ts
