--- a/website/package.json
+++ b/website/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "database.dev",
+  "name": "dbdev-website",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "@supabase/supabase-js": "^1.29.1",
-    "@supabase/ui": "^0.36.2",
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-query": "^3.34.8"
+    "@heroicons/react": "^2.0.15",
+    "@next/font": "13.1.6",
+    "@supabase/supabase-js": "^2.8.0",
+    "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "clsx": "^1.2.1",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/jest": "^27.4.0",
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.8",
-    "jest": "^27.4.7",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
