--- a/website/package.json
+++ b/website/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.15",
+    "@heroicons/react": "^2.0.16",
     "@next/font": "13.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@supabase/supabase-js": "^2.8.0",
     "@tanstack/react-query": "^4.24.6",
     "@tanstack/react-query-devtools": "^4.24.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
@@ -27,6 +29,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
