--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@next/font": "13.1.6",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@supabase/supabase-js": "^2.8.0",
     "@tanstack/react-query": "^4.24.6",
