--- a/website/package.json
+++ b/website/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@next/font": "13.1.6",
+    "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-label": "^2.0.0",
     "@supabase/supabase-js": "^2.8.0",
     "@tanstack/react-query": "^4.24.6",
     "@tanstack/react-query-devtools": "^4.24.6",
@@ -23,11 +25,16 @@
     "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "final-form": "^4.20.9",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
     "react-hot-toast": "^2.4.0",
-    "typescript": "4.9.5"
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
+    "typescript": "4.9.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
