replace dbdev poc python CLI with TLE CLI

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "tlecli"
+name = "dbdev"
 version = "0.1.0"
 edition = "2021"
-author = "supabase"
+authors = ["supabase"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
