--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["supabase"]
 [dependencies]
 anyhow = "1.0.69"
 clap = { version = "4.1.6", features = ["derive"] }
+postgrest = "1.5.0"
 sqlx = { version = "0.6.2", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
 thiserror = "1.0.38"
-tokio = "1.25.0"
+tokio = { version = "1", features = ["full"] }
