--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,9 @@ authors = ["supabase"]
 anyhow = "1.0.69"
 clap = { version = "4.1.6", features = ["derive"] }
 postgrest = "1.5.0"
+reqwest = { version = "0.11.14", features = ["json"] }
+serde = { version = "1.0.156", features = ["derive"] }
+serde_json = "1.0.94"
 sqlx = { version = "0.6.2", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
 thiserror = "1.0.38"
 tokio = { version = "1", features = ["full"] }
