--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0.94"
 sqlx = { version = "0.6.2", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
 thiserror = "1.0.38"
 tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.3.0", features = ["serde"] }
