--- a/website/package.json
+++ b/website/package.json
@@ -31,6 +31,8 @@
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
     "react-hot-toast": "^2.4.0",
+    "react-markdown": "^8.0.6",
+    "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "4.9.5",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
