--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-label": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@supabase/supabase-js": "^2.8.0",
     "@tanstack/react-query": "^4.24.6",
     "@tanstack/react-query-devtools": "^4.24.6",
@@ -23,6 +24,7 @@
     "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "final-form": "^4.20.9",
