--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.3",
     "@supabase/supabase-js": "^2.8.0",
