--- a/website/package.json
+++ b/website/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
     "tailwindcss": "^3.2.6"
   },
   "prettier": {
