--- a/.github/workflows/cli.yaml
+++ b/.github/workflows/cli.yaml
@@ -18,5 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
+      working-directory: ./cli
     - name: Run tests
       run: cargo test --verbose
+      working-directory: ./cli
