--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,8 +9,10 @@ authors = ["supabase"]
 [dependencies]
 anyhow = "1.0.69"
 clap = { version = "4.1.6", features = ["derive"] }
+dirs = "5.0.1"
 postgrest = "1.5.0"
 reqwest = { version = "0.11.14", features = ["json"] }
+rpassword = "7.2.0"
 serde = { version = "1.0.156", features = ["derive"] }
 serde_json = "1.0.94"
 sqlx = { version = "0.6.2", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
