--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,7 +15,12 @@ reqwest = { version = "0.11.14", features = ["json"] }
 rpassword = "7.2.0"
 serde = { version = "1.0.156", features = ["derive"] }
 serde_json = "1.0.94"
-sqlx = { version = "0.6.2", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
+sqlx = { version = "0.6.2", features = [
+    "postgres",
+    "chrono",
+    "uuid",
+    "runtime-tokio-rustls",
+] }
 thiserror = "1.0.38"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.3.0", features = ["serde"] }
