--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -15,4 +15,5 @@ jobs:
         uses: creyD/prettier_action@v4.3
         with:
           # Prettier CLI arguments
-          prettier_options: --check ./website
+          prettier_options: --check .
+          working_directory: ./website
