--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,4 +23,6 @@ sqlx = { version = "0.6.2", features = [
 ] }
 thiserror = "1.0.38"
 tokio = { version = "1", features = ["full"] }
+toml = { version = "0.7.6", features = ["preserve_order"] }
+url = { version = "2.4.1", features = ["serde"] }
 uuid = { version = "1.3.0", features = ["serde"] }
