--- a/.github/workflows/cli.yaml
+++ b/.github/workflows/cli.yaml
@@ -2,23 +2,22 @@ name: CLI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-      working-directory: ./cli
-    - name: Run tests
-      run: cargo test --verbose
-      working-directory: ./cli
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --release --verbose
+        working-directory: ./cli
+      - name: Run tests
+        run: cargo test --release --verbose
+        working-directory: ./cli
