--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -1,9 +1,14 @@
 name: Release CLI
 
+# on:
+#   push:
+#     tags:
+#       - 'v*'
 on:
   push:
-    tags:
-      - 'v*'
+    branches: ["feat/release-cli"]
+  pull_request:
+    branches: ["feat/release-cli"]
 
 jobs:
   release:
