Revert "temporarily use non-tag triggers"
This reverts commit 20292e1fc8def7e98e3d4c718f830d62fd405c4f.

--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -1,14 +1,9 @@
 name: Release CLI
 
-# on:
-#   push:
-#     tags:
-#       - 'v*'
 on:
   push:
-    branches: ["feat/release-cli"]
-  pull_request:
-    branches: ["feat/release-cli"]
+    tags:
+      - 'v*'
 
 jobs:
   release:
