--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -43,8 +43,8 @@ jobs:
         run: cargo build --release --verbose
         working-directory: ./cli
 
-       name: Tarball
-       run: cd ./cli/target/release && tar -czvf dbdev.tar.gz ./dbdev
+      - name: Tarball
+        run: cd ./cli/target/release && tar -czvf dbdev.tar.gz ./dbdev
 
       - name: Get Upload Url
         run: echo UPLOAD_URL=$(curl --silent https://api.github.com/repos/${{ github.repository }}/releases/latest | jq .upload_url --raw-output) >> $GITHUB_ENV
