--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -28,7 +28,7 @@ jobs:
   build:
     name: Release Artifacts
     needs:
-      - release
+      - create-release
     strategy:
       matrix:
         box:
