--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -22,7 +22,7 @@ jobs:
           release_name: ${{ github.ref }}
           body: |
             TODO: Write release notes
-          draft: false
+          draft: true
           prerelease: false
 
   build:
@@ -38,12 +38,12 @@ jobs:
     runs-on: ${{ matrix.box.runner }}
     timeout-minutes: 45
     steps:
-      - name: Build
       - uses: actions/checkout@v3
-        run: cargo build --release
+      - name: Build
+        run: cargo build --release --verbose
         working-directory: ./cli
 
-      - name: Create Tarball
+      - name: Tarball
         run: cd ./cli/target/release && tar -czvf dbdev.tar.gz ./dbdev
 
       - name: Get Upload Url
@@ -56,5 +56,5 @@ jobs:
         with:
           upload_url: ${{ env.UPLOAD_URL }}
           asset_path: ./cli/target/release/dbdev.tar.gz
-          asset_name: dbdev-${{ github.ref_name }}-${{ matrix.box.os-and-arch }}.tar.gz
-          asset_content_type: application/gzip
+          asset_name: dbdev-${{ github.ref_name }}-${{ matrix.box.os-and-arch }}
+          asset_content_type: application/binary
