--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -44,12 +44,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends curl
 
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --profile minimal --default-toolchain stable && \
-            rustup --version && \
-            rustc --version && \
-            cargo --version
-
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --profile minimal --default-toolchain stable
           source "$HOME/.cargo/env"
+          rustup --version && rustc --version && cargo --version
+
 
       - uses: actions/checkout@v3
       - name: Build
