--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -38,7 +38,8 @@ jobs:
     runs-on: ${{ matrix.box.runner }}
     timeout-minutes: 45
     steps:
-      - name: Install Rust
+      - uses: actions/checkout@v3
+      - name: Build on linux-arm64
         if: ${{ matrix.box.os-and-arch != 'linux-amd64' }}
         run: |
           sudo apt-get update
@@ -48,9 +49,10 @@ jobs:
           source "$HOME/.cargo/env"
           rustup --version && rustc --version && cargo --version
 
+          cd cli && cargo build --release
 
       - uses: actions/checkout@v3
-      - name: Build
+      - name: Build on linux-amd64
         run: cargo build --release
         working-directory: ./cli
 
