--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -43,7 +43,7 @@ jobs:
         if: ${{ matrix.box.os-and-arch != 'linux-amd64' }}
         run: |
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends curl build-essential libssl-dev
+          sudo apt-get install -y --no-install-recommends curl build-essential libssl-dev pkg-config
 
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --profile minimal --default-toolchain stable
           source "$HOME/.cargo/env"
