--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build on linux-arm64
-        if: ${{ matrix.box.os-and-arch != 'linux-amd64' }}
+        if: ${{ matrix.box.os-and-arch == 'linux-arm64' }}
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends curl build-essential libssl-dev pkg-config
@@ -53,6 +53,7 @@ jobs:
 
       - uses: actions/checkout@v3
       - name: Build on linux-amd64
+        if: ${{ matrix.box.os-and-arch == 'linux-amd64' }}
         run: cargo build --release
         working-directory: ./cli
 
