change to source checkout directory before ending step

--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -60,6 +60,8 @@ jobs:
           echo "build tar.gz"
           tar -czvf dbdev.tar.gz ./dbdev
           ls -al
+          cd ../../../
+          pwd
           echo "done"
 
       - uses: actions/checkout@v3
