--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -49,17 +49,12 @@ jobs:
           source "$HOME/.cargo/env"
           rustup --version && rustc --version && cargo --version
 
-          pwd
+          echo "cd cli"
           cd cli
-          pwd
+          echo "cargo build --release"
           cargo build --release
-          echo "cd ./target/release"
-          cd ./target/release
-          pwd
-          ls -al
           echo "build tar.gz"
-          tar -czvf dbdev.tar.gz ./dbdev
-          ls -al
+          cd ./target/release && tar -czvf dbdev.tar.gz ./dbdev
           echo "done"
 
       - uses: actions/checkout@v3
