--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -5,7 +5,7 @@ name: Release CLI
 #     tags:
 #       - "v*"
 
-# used only for testing
+# used only for testing a
 on:
   push:
     branches: ['feat/better-upload-url']
