--- a/.github/workflows/test-workflow.yaml
+++ b/.github/workflows/test-workflow.yaml
@@ -10,3 +10,4 @@ jobs:
     uses: ./.github/workflows/release-homebrew-tap.yaml
     with:
       tag: v0.1.2
+      homebrew_tap_rw: ${{ secrets.HOMEBREW_TAP_RW }}
