correct secrets syntax

--- a/.github/workflows/test-workflow.yaml
+++ b/.github/workflows/test-workflow.yaml
@@ -10,4 +10,5 @@ jobs:
     uses: ./.github/workflows/release-homebrew-tap.yaml
     with:
       tag: v0.1.2
+    secrets:
       homebrew_tap_rw: ${{ secrets.HOMEBREW_TAP_RW }}
