--- a/.github/workflows/release-homebrew-tap.yaml
+++ b/.github/workflows/release-homebrew-tap.yaml
@@ -98,6 +98,7 @@ jobs:
         echo '    end' >> dbdev.rb
         echo '  end' >> dbdev.rb
         echo 'end' >> dbdev.rb
+        echo ''
 
         git diff
 
