--- a/.github/workflows/manual-release-brew-and-scoop.yaml
+++ b/.github/workflows/manual-release-brew-and-scoop.yaml
@@ -7,6 +7,9 @@ on:
         description: "Tag to release (e.g. v1.2.3)"
         required: true
 
+permissions:
+  contents: write
+
 jobs:
   call-release-homebrew-tap:
     uses: ./.github/workflows/release-homebrew-tap.yaml
