--- a/.github/workflows/release-scoop-bucket.yaml
+++ b/.github/workflows/release-scoop-bucket.yaml
@@ -10,6 +10,9 @@ on:
       scoop_bucket_rw:
         required: true
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -31,9 +34,9 @@ jobs:
       run: |
         windows_amd64_hash=`shasum -a 256 dbdev-${{ inputs.tag }}-windows-amd64.zip | cut -d" " -f1`
 
-        tag=${{ inputs.tag }}
+        tag="${{ inputs.tag }}"
         # strip the leading v
-        version=${tag:1}
+        version="${tag:1}"
 
         # update dbdev.json file
         echo '{' > dbdev.json
