--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,6 +23,7 @@ sqlx = { version = "0.8.6", features = [
     "uuid",
     "runtime-tokio-rustls",
 ] }
+tempfile = "3.20.0"
 thiserror = "2.0.12"
 tokio = { version = "1", features = ["full"] }
 toml = { version = "0.9.2", features = ["preserve_order"] }
