Remove labels and update commit messages

--- a/.github/workflows/release-homebrew-tap.yaml
+++ b/.github/workflows/release-homebrew-tap.yaml
@@ -116,7 +116,7 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.homebrew_tap_rw }}
-          commit-message: "dbdev brew formula update for version v${{ steps.vars.outputs.version }}"
+          commit-message: "Release dbdev version v${{ steps.vars.outputs.version }}"
           title: "Release dbdev version v${{ steps.vars.outputs.version }}"
           body-path: PR_BODY.md
           add-paths: |
@@ -125,5 +125,3 @@ jobs:
           base: "main"
           committer: "dbdev release-homebrew-tap.yaml workflow <raminder@supabase.io>"
           author: "dbdev release-homebrew-tap.yaml workflow <raminder@supabase.io>"
-          labels: |
-            automated
